delete and tick and modifyyy

--- a/index.html
+++ b/index.html
@@ -226,8 +226,11 @@
 
 
                 <div class="row p-3">
-                    <h3 class="text-white ">Tags</h3>
-                    <p class="text-white pt-1 m-1"> Sort by: </p>
+                    <h3 class="text-white">Tags</h3>
+                    <p class=" text-white
+                        pt-1 m-1"> Sort by: </p>
+
+                    
 
                     <button type="button" class="btn btn-warning text-white m-1 allBtn">All</button>
                     <button type="button" class="btn btn-danger m-1 todoBtn">To do</button> <button type="button" class="btn btn-success m-1 doneBtn">Done</button>
